2001-01-21  Jeff Freedman  <jeff@amy.nerble.net>

	* In SI, treat SETR as a RTS as well.  Fixes infinite loop when
	trying to buy from armourer.

2001-01-21  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* cheat.cc, intrinsics.cc: fixed SI map. (somewhat)
	
2001-01-20  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Bug fixes:  Theft, right-double-click, crash after
	Alagnar is killed

2001-01-19  Tristan Tarrant <nadir@users.sourceforge.net>
	* tools/u7shp.c: renamed. As per Ryan's request, the plugin now uses 
	  guides to identify the hotspot. Caveat: only the hotspot of the first 
	  frame is considered

2001-01-19  Ryan Nunn <triforce@merlin.net.au>
	* actors.*, exult.cc, gamewin.*, NEWS, gumps/*.* :
	  SI paperdolls in BG
	* gameclk.*, gamewin.h : Time now counts in minutes not per 15 minutes.
	  Also added timerate variable for potential cheat useage like the
	  originals.
	* audio/midi_drivers/win_midiout.* : Replaced all SDL calls with the
	  equivilant Win32 calls.

2001-01-18  Tristan Tarrant <nadir@users.sourceforge.net>
	* data/exult_logo.shp: removed spurious pixels

2001-01-18  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* iwin8.cc/h: removed SDL_video.h from iwin8.h

2001-01-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* actors.cc, conversation.cc: fixed 'male avatar has female face' bug
	* lots-of-files: removed superfluous SDL.h includes, replaced some SDL.h includes by SDL_video.h/SDL_audio.h/etc... (cutting compile time with almost 20% on my system!)

2001-01-17  Jeff Freedman  <jeff@amy.nerble.net>
	* exult.cc: Fixed restart problem in Trinsic.
	* Ucc - C-comments and #include added.

2001-01-14  Jeff Freedman  <jeff@amy.nerble.net>
	* Bugs fixed:  Crash (out of memory) at end, guards, walking in
	sleep.
	
	* gamewin.cc (Game_window): "userusecode" entry in .exult.cfg
	allows for custom Usecode functions.
	* npcnear.cc: Faster response for SI's rabbit, and storms cleaned
	up a bit more.
